plang/testing/logs/false-incorrect/7/program7.p.p.out
Error at d0J9 (V8Ait) (Dg) (Wk) (i5kG (WJpF) Raiz) :- ((rFPa rg6 e)).:4:44 error: 
d0J9 (V8Ait) (Dg) (Wk) (i5kG (WJpF) Raiz) :- ((rFPa rg6 e)).
                                           ^
Error at d0J9 (V8Ait) (Dg) (Wk) (i5kG (WJpF) Raiz) :- ((rFPa rg6 e)).:4:57 error: 
d0J9 (V8Ait) (Dg) (Wk) (i5kG (WJpF) Raiz) :- ((rFPa rg6 e)).
                                                        ^
Error at s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).:7:21 error: 
s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).
                    ^
Error at s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).:7:24 error: 
s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).
                       ^
Error at s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).:7:59 error: 
s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).
                                                          ^
Error at jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).:10:13 error: 
jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).
            ^
Error at jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).:10:32 error: 
jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).
                               ^
Error at jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).:10:41 error: 
jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).
                                        ^
Error at jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).:10:208 error: 
jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).
                                                                                                                                                                                                               ^
Error at ? (mIq Th hz, s0 ECN OM, tWud pLF; fQ1 (YCnN) (T4EEW) (YtF)), (o (wOQF IdWf) yM (c4ei (r (whr Pz) (uO (Kgv)) (nN) cLL) Wh)); (qKeeI vyV l2Z lJZEX), yLM m j T6, bRbX bDU, c; (jBv); z9 (n), g; x2f vNj1; prX2 (S0) (u); nh H (Np), dxi (ojI (Mxue) (L) (p pm7x OwvS2)) (hGM) qsnj.:12:1 error: 
? (mIq Th hz, s0 ECN OM, tWud pLF; fQ1 (YCnN) (T4EEW) (YtF)), (o (wOQF IdWf) yM (c4ei (r (whr Pz) (uO (Kgv)) (nN) cLL) Wh)); (qKeeI vyV l2Z lJZEX), yLM m j T6, bRbX bDU, c; (jBv); z9 (n), g; x2f vNj1; prX2 (S0) (u); nh H (Np), dxi (ojI (Mxue) (L) (p pm7x OwvS2)) (hGM) qsnj.
^