plang/testing/logs/false-incorrect/7/program7.p.p
f.


d0J9 (V8Ait) (Dg) (Wk) (i5kG (WJpF) Raiz) :- ((rFPa rg6 e)).
s1mj rSkCC.

s (PO) (JBRp) LOst :- (t); yUF p O (tCrc (UjCR) oE pOx) bli; qzs SJ (e4Kpv (VT) zYw PF1).


jdxr ORYgz :- (dQ8f v86Uo cwPp E), ((lFim, x80fm h (fyI (mgCn) (jFj (SUDi) (s (wVOg) (a qPLw) (K) (c5 (iQRoW m (Wv6P)) (KU) (uhMI6 (HSL) NAvc (vOx (TM) (wDP Il (FN))) (yX032 eb)) uSj)) xHC) pLo (q (h8N))) Cbl)), yparr G A (zoaI (lw QeCK qhw) Xp (gC loy1B l) (XV)) (CMe4).

? (mIq Th hz, s0 ECN OM, tWud pLF; fQ1 (YCnN) (T4EEW) (YtF)), (o (wOQF IdWf) yM (c4ei (r (whr Pz) (uO (Kgv)) (nN) cLL) Wh)); (qKeeI vyV l2Z lJZEX), yLM m j T6, bRbX bDU, c; (jBv); z9 (n), g; x2f vNj1; prX2 (S0) (u); nh H (Np), dxi (ojI (Mxue) (L) (p pm7x OwvS2)) (hGM) qsnj.
